--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <img src="assets/images/people/7704332996_2b8f3f72cf_z.jpg">
                 <div class="people-title">
                     <p>
-                        ANTONIO GUTERRES
+                        Antonio Guterres
                         <br>Secretary-General United
                         <br>Nations
                     </p>
